[gd_scene load_steps=7 format=2]

[ext_resource path="res://lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MultiplayerConfig" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -193.0
margin_right = 250.0
margin_bottom = 193.0

[node name="V" type="VBoxContainer" parent="MultiplayerConfig"]
margin_top = 6.0
margin_right = 500.0
margin_bottom = 380.0
custom_constants/separation = 20

[node name="V" type="VBoxContainer" parent="MultiplayerConfig/V"]
margin_right = 500.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="MultiplayerConfig/V/V"]
margin_right = 500.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Server IP"

[node name="ServerIP" type="LineEdit" parent="MultiplayerConfig/V/V"]
margin_top = 29.0
margin_right = 500.0
margin_bottom = 88.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = SubResource( 2 )
text = "Server IP"
align = 1
clear_button_enabled = true

[node name="JoinButton" type="Button" parent="MultiplayerConfig/V"]
margin_top = 108.0
margin_right = 500.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "Join"

[node name="CreateButton" type="Button" parent="MultiplayerConfig/V"]
margin_top = 183.0
margin_right = 500.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 1 )
text = "Create"

[node name="HSeparator" type="HSeparator" parent="MultiplayerConfig/V"]
margin_top = 258.0
margin_right = 500.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 30 )

[node name="V2" type="VBoxContainer" parent="MultiplayerConfig/V"]
margin_top = 308.0
margin_right = 500.0
margin_bottom = 374.0

[node name="Label2" type="Label" parent="MultiplayerConfig/V/V2"]
margin_right = 500.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Your IP"

[node name="DeviceIPLabel" type="Label" parent="MultiplayerConfig/V/V2"]
margin_top = 29.0
margin_right = 500.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
align = 1

[connection signal="pressed" from="MultiplayerConfig/V/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="MultiplayerConfig/V/CreateButton" to="." method="_on_CreateButton_pressed"]
